# defending-iaas-with-attack

./: .gitignore  CONTRIBUTING.md  Cyber_Threat_Model_Methodology.md  Makefile  README.md  pyproject.toml
.github/workflows/: publish.yml
data/: README.md  defending-iaas-0.1.json  defending-iaas-1.0.json  enterprise-attack-v11.3-IaaS_Collection-techniques.xlsx  readme.md
docs/: README.md  collection.rst  conf.py  gettingstarted.rst  index.rst  methodology.rst  overview.rst  requirements.txt
docs/_static/css/: ctid.css
